# Sonic-Mania-Decompilation

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Android.mk  Application.mk  CMakeLists.txt  Dockerfile  Game  LICENSE.md  Makefile  README.md  SonicMania.h  SonicMania.sln  SonicMania.vcxproj  SonicMania.vcxproj.filters  clang-format-commands.txt  depends.txt  main.cpp  mingw64-make.sh  progress.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml
Debug/SonicMania.tlog/: CL.command.1.tlog  CL.write.1.tlog  SonicMania.lastbuildstate
Engine/: Collision.h  Drawing.h  Objects.h  Sprites.h
Game/: Objects.h  Options.h
Game/Global/: Ring.cpp  Ring.h
Game/Objects/: AIZEggRobo.cpp  AIZEggRobo.h  AIZEncoreTutorial.cpp  AIZEncoreTutorial.h  AIZKingClaw.cpp  AIZKingClaw.h  AIZRockPile.cpp  AIZRockPile.h  AIZSetup.cpp  AIZSetup.h  AIZTornado.cpp  AIZTornado.h  AIZTornadoPath.cpp  AIZTornadoPath.h  AmoebaDroid.cpp  AmoebaDroid.h  AnimalHBH.cpp  AnimalHBH.h  Announcer.cpp  Announcer.h  Aquis.cpp  Aquis.h  Armadiloid.cpp  Armadiloid.h  BGSwitch.cpp  BGSwitch.h  BSS_Collectable.cpp  BSS_Collectable.h  BSS_Collected.cpp  BSS_Collected.h  BSS_HUD.cpp  BSS_HUD.h  BSS_Horizon.cpp  BSS_Horizon.h  BSS_Message.cpp  BSS_Message.h  BSS_Palette.cpp  BSS_Palette.h  BSS_Player.cpp  BSS_Player.h  (+1046 more)
RSDKv5/: Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  Collision.cpp  Collision.hpp  Debug.cpp  Debug.hpp  DefaultObject.cpp  DefaultObject.hpp  DevFont.hpp  DevOutput.cpp  DevOutput.hpp  Drawing.cpp  Drawing.hpp  Input.cpp  Input.hpp  Link.cpp  Link.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Object.cpp  Object.hpp  Palette.cpp  Palette.hpp  RSDKv5.rc  RSDKv5.res  RSDKv5.vcxproj  RSDKv5.vcxproj.filters  RSDKv5_dx11.vcxproj  RSDKv5_dx11.vcxproj.filters  RSDKv5_dx9.vcxproj  RSDKv5_dx9.vcxproj.filters  RSDKv5_gl3.vcxproj  RSDKv5_gl3.vcxproj.filters  RSDKv5_sdl2.vcxproj  RSDKv5_sdl2.vcxproj.filters  Reader.cpp  (+39 more)
RSDKv5 ios.xcodeproj/: project.pbxproj
RSDKv5 ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
RSDKv5 ios.xcodeproj/xcshareddata/xcschemes/: RSDKv5.xcscheme
RSDKv5.xcodeproj/: project.pbxproj
RSDKv5.xcodeproj/xcshareddata/xcschemes/: RSDKv5.xcscheme
RSDKv5/RSDK/Audio/: Audio.cpp  Audio.hpp
RSDKv5/RSDK/Core/: Link.cpp  Link.hpp  Math.cpp  Math.hpp  ModAPI.cpp  ModAPI.hpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp
RSDKv5/RSDK/Dev/: Debug.cpp  Debug.hpp  (+1 more)
RSDKv5/Shaders/: CRT-Yee64.hlsl  Clean.hlsl  None.hlsl  README.md  RGB-Image.hlsl  YUV-420.hlsl  YUV-422.hlsl  compileVSO.bat
RSDKv5/assets/: generate.py
Sonic Mania/: All.h  GameLink.h  GameLink.hpp  GameObjects.c  GameObjects.cpp  GameObjects.h  GameObjects.hpp  GameOptions.c  GameOptions.cpp  GameOptions.h  GameOptions.hpp  GameVariables.h  Objects.cfg  Sonic Mania.rc  Sonic Mania.vcxproj  Sonic Mania.vcxproj.filters  Sonic Mania_All.vcxproj  Sonic Mania_All.vcxproj.filters  Sonic Mania_PrePlus.vcxproj  Sonic Mania_PrePlus.vcxproj.filters  SonicMania.h  SonicMania.hpp  autostatic.py  buildstatic.bat  buildstaticv1.bat  order.txt  resource.h
Sonic Mania/Objects/: AIZEggRobo.c  AIZEggRobo.cpp  AIZEggRobo.h  AIZEggRobo.hpp  AIZEncoreTutorial.c  AIZEncoreTutorial.cpp  AIZEncoreTutorial.h  AIZEncoreTutorial.hpp  AIZKingClaw.c  AIZKingClaw.cpp  AIZKingClaw.h  AIZKingClaw.hpp  AIZRockPile.c  AIZRockPile.cpp  AIZRockPile.h  AIZRockPile.hpp  AIZSetup.c  AIZSetup.cpp  AIZSetup.h  AIZSetup.hpp  AIZTornado.c  AIZTornado.cpp  AIZTornado.h  AIZTornado.hpp  AIZTornadoPath.c  AIZTornadoPath.cpp  AIZTornadoPath.h  AIZTornadoPath.hpp  APICallback.c  APICallback.h  Acetone.c  Acetone.h  ActClear.c  ActClear.cpp  ActClear.h  ActClear.hpp  All.c  AmoebaDroid.c  AmoebaDroid.cpp  AmoebaDroid.h  (+2313 more)
SonicMania/: All.h  Game.c  Game.h  GameLink.h  GameMain.h  GameObjects.c  GameObjects.h  GameVariables.c  GameVariables.h  Objects.cmake  PublicFunctions.c  SonicMania.c  SonicMania.h  SonicMania.vcxproj  SonicMania.vcxproj.filters  SonicMania_All.vcxproj  SonicMania_All.vcxproj.filters  SonicMania_All_PrePlus.vcxproj  SonicMania_All_PrePlus.vcxproj.filters  SonicMania_All_Rev0U.vcxproj  SonicMania_All_Rev0U.vcxproj.filters  SonicMania_PrePlus.vcxproj  SonicMania_PrePlus.vcxproj.filters  SonicMania_Rev0U.vcxproj  SonicMania_Rev0U.vcxproj.filters  autostatic.py  funcheader.py  main.cpp  objectcmake.py  objectmake.py
SonicMania ios.xcodeproj/: project.pbxproj
SonicMania.xcodeproj/: project.pbxproj
SonicMania/Engine/: Animation.cpp  Animation.hpp  Audio.hpp  Collision.hpp  Debug.cpp  Debug.hpp  DefaultObject.hpp  DevOutput.cpp  Drawing.cpp  Drawing.hpp  Input.cpp  Input.hpp  Link.cpp  Link.hpp  Math.hpp  Object.cpp  Object.hpp  Reader.cpp  Reader.hpp  RetroEngine.cpp  RetroEngine.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Userdata.cpp  Userdata.hpp
SonicMania/Game/: GameObjects.cpp  GameObjects.hpp  GameOptions.cpp  SonicMania.hpp
SonicMania/Objects/: All.c
android/: build.gradle
android/app/: build.gradle
dependencies/all/: .gitignore  README.md  dependencies.txt
dependencies/android/: .gitignore  README.md  SETUP.md  androidHelpers.cpp  dependencies.txt
dependencies/gl3/: .gitignore  README.md  dependencies.txt
dependencies/ios/: .gitignore  Info.plist  README.md  dependencies.txt
dependencies/linux/: README.md  SETUP.md
dependencies/mac/: .gitignore  README.md  SETUP.md  cocoaHelpers.hpp  cocoaHelpers.mm  dependencies.txt
dependencies/windows/: .gitignore  README.md  SETUP.md  dependencies.txt  unistd.h
filters/: DX11.slnf  DX9.slnf  GL3.slnf  SDL2.slnf
filters/all/: DX11.slnf  DX9.slnf  GL3.slnf  SDL2.slnf
makefiles/: Android.cfg  Linux.cfg  Switch.cfg  Windows.cfg
mods/ProperTest/: GameLink.h  GameObjects.h  GameOptions.h  Main.cpp  ProperTest.h  ProperTest.sln  ProperTest.vcxproj  ProperTest.vcxproj.filters  Spikes.cpp  Spikes.h  TitleCard.cpp  TitleCard.h  Zone.h
props/: winactions.props  winactions_x64.props
wiiu/: CMakeLists.txt
wiiu/sd_card_data/RSDK/v5/: Settings.ini
wiiu/sd_card_data/wiiu/apps/SonicMania/: meta.xml
(+3190 files in other folders)
